# IntelChair

./: .gitignore  .gitmodules  README.md
IntelChairWebSite/: clients.html  developers.html  documentation.html  index.html  logbook.html  team.html
IntelChairWebSite/css/: custom.css  style.css  style.min.css
admin_dash/: index.html  maps.html  user.html
admin_dash/js/: load_info.js
dashboard/: index.html  maps.html  user.html  wheelchair.html
dashboard/css/: custom.css  sb-admin-2.min.css
dashboard/js/: chairs.js  dash.js  shared.js  users.js
dashboard/js/demo/: datatables-demo.js
docs/: mkdocs.yml
docs/docs/: arch.md  architecture.md  client.md  deliv.md  dev.md  developer.md  index.md  log.md  manual.md  personas.md  requirements.md  results.md  spec.md  team.md  test.md  vision.md
docs/docs/architecture/: mobile.md  server.md  system.md  wheelchair.md
docs/docs/client/: client.md  features.md  risks.md
docs/docs/developer/: mobile.md  server.md  system.md  tech.md  wheelchair.md
docs/docs/outcome/: future.md  results.md
docs/docs/specification/: functionality.md  (+2 more)
docs/site/: 404.html  index.html  search.html  sitemap.xml
jla/iris_rtk/: package.xml
jla/iris_rtk/include/rtk/geom/: lie.h  pinhole.h  pose2d.h  pose3d.h
jla/iris_rtk/include/rtk/io/: image_io.h
jla/iris_rtk/include/rtk/ldc/: pithy_buffer_compressor.h  quicklz_buffer_compressor.h
jla/iris_rtk/include/rtk/nlls/: dog_leg.h
jla/iris_rtk/include/rtk/sdm/: distance_map.h  dynamic_distance_map.h  frequency_occupancy_map.h  probabilistic_occupancy_map.h  simple_occupancy_map.h
jla/iris_rtk/include/rtk/slam/: match_surface_2d.h
jla/iris_rtk/include/rtk/structs/: cow_ptr.h
jla/iris_rtk/include/rtk/time/: rate.h
jla/iris_rtk/src/: CMakeLists.txt  print.cpp  thread_pool.cpp
jla/iris_rtk/src/_vendor/ldc/: CMakeLists.txt
jla/iris_rtk/src/_vendor/ldc/quicklz/: quicklz.c
jla/iris_rtk/src/apps/: carmen.cpp  slam2d.cpp
jla/iris_rtk/src/geom/: line_segment.cpp
jla/iris_rtk/src/nlls/: levenberg_marquardt.cpp  rprop.cpp
jla/iris_rtk/src/sdm/: container.cpp  frequency_occupancy_map.cpp  map.cpp  probabilistic_occupancy_map.cpp
jla/iris_rtk/src/slam/: match_surface_2d.cpp
jla/iris_rtk/src/time/: rate.cpp
jla/pc_code/: coloritem.cpp  dialog.ui  main.cpp  pterm.cpp  qrc_dialog.cpp
jla/pic_code/: WheeChairDriver.c  pic32_uart.c
mobile/: README.md  auth.html  index.html  joystick.html  joystick.js  pc_subscriber.cpp  virtualjoystick.js
mobile/mobile_app/: index.html  joystick.js  package.json
mobile/voice/: voice.html
ros_ws/: global_cost  global_inflatoin  local_cost  savemap.sh  sec.pgm  sec.yaml  students.pgm  trajectory  vel.sh
ros_ws/bags/: long.bag.REMOVED.git-id
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_ws/maps/: 118.pgm  118.yaml  atrio.pgm  atrio.yaml  first.pgm  first.yaml  iris.pgm  iris.yaml  students.yaml
ros_ws/src/intelchair/: CMakeLists.txt  base_local_planner.yaml  common_costmap.yaml  global_costmap.yaml  local_costmap.yaml  lol.pgm  lol.yaml  package.xml
ros_ws/src/intelchair/launch/: mapping.launch  navigation.launch  robot_launch.launch  wheelchair.launch
ros_ws/src/intelchair/msg/: ChairMsg.msg
ros_ws/src/intelchair/src/: CommHandler.cpp  CommHandler.h  CommSerial.cpp  base_controller.cpp  cmdvel_parser.cpp  pc_publisher.cpp  pc_subscriber.cpp  server_connection.py  server_connection2.py  tf_broadcaster.cpp
ros_ws/src/intelchair/srv/: ChairConnection.srv  ChairVelocity.srv
ros_ws/src/iris_rtk/: CMakeLists.txt  LICENSE
ros_ws/src/iris_rtk/include/rtk/: print.h  thread_pool.h  types.h
ros_ws/src/iris_rtk/include/rtk/geom/: circle.h  line.h  line_segment.h
ros_ws/src/iris_rtk/include/rtk/ldc/: buffer_compressor.h  lz4_buffer_compressor.h  zstd_buffer_compressor.h
ros_ws/src/iris_rtk/include/rtk/math/: random.h  stats.h
ros_ws/src/iris_rtk/include/rtk/nlls/: gauss_newton.h  levenberg_marquardt.h  problem.h  robust_cost.h  rprop.h  solver.h  strategy.h
ros_ws/src/iris_rtk/include/rtk/sdm/: container.h  export.h  map.h  occupancy_map.h  truncated_signed_distance_map.h
ros_ws/src/iris_rtk/include/rtk/slam/: loc2d.h  match_surface_3d.h  online_dead_reckoning.h  pf_slam2d.h  slam2d.h
ros_ws/src/iris_rtk/include/rtk/structs/: concurrent_queue.h  image.h  laser_scan.h  priority_queue.h
ros_ws/src/iris_rtk/include/rtk/time/: duration.h  frequency.h  time.h  timer.h
ros_ws/src/iris_rtk/src/_vendor/ldc/pithy/: pithy.cpp  pithy.h
ros_ws/src/iris_rtk/src/_vendor/ldc/quicklz/: quicklz.h
ros_ws/src/iris_rtk/src/apps/: carmen.h  pf_slam2d.cpp
ros_ws/src/iris_rtk/src/geom/: circle.cpp  line.cpp  pinhole.cpp  pose2d.cpp  pose3d.cpp
ros_ws/src/iris_rtk/src/io/: image_io.cpp
ros_ws/src/iris_rtk/src/ldc/: lz4_buffer_compressor.cpp  pithy_buffer_compressor.cpp  quicklz_buffer_compressor.cpp  zstd_buffer_compressor.cpp
ros_ws/src/iris_rtk/src/math/: random.cpp  stats.cpp
ros_ws/src/iris_rtk/src/nlls/: dog_leg.cpp  gauss_newton.cpp  robust_cost.cpp  solver.cpp
ros_ws/src/iris_rtk/src/sdm/: dynamic_distance_map.cpp  export.cpp  simple_occupancy_map.cpp
ros_ws/src/iris_rtk/src/slam/: loc2d.cpp  match_surface_3d.cpp  pf_slam2d.cpp  slam2d.cpp
ros_ws/src/iris_rtk/src/time/: duration.cpp  frequency.cpp  time.cpp  timer.cpp
ros_ws/src/iris_rtk_ros/: CMakeLists.txt  package.xml
ros_ws/src/iris_rtk_ros/include/rtk/ros/: pf_slam2d_ros.h  slam2d_ros.h
ros_ws/src/iris_rtk_ros/src/: loc2d_ros.cpp  slam2d_ros.cpp
ros_ws/src/pointcloud_rotate/: CMakeLists.txt  package.xml
ros_ws/src/pointcloud_rotate/src/: pointcloud_transform.cpp
server/: Dockerfile  README.md  chairs.db  database.db  database2.db  docker-compose.yml  history.db  requirements.txt  run.py  run_server.sh  server.py  server2.py  serverOld.py  users.db
server/intelchair/: __init__.py  auth.html  index.html
server/old/: server.py
server/static/: application.js  auth.js  joystick.js  navigation.js  ros.js  voice.js
server/templates/: auth.html  index.html
yolo_freenect/: CMakeLists.txt  Makefile  yolo.cpp  yolo_orig.cpp
(+65 files in other folders)
