<?xml version="1.0"?>
<package>
  <name>pointcloud_rotate</name>
  <version>0.2.0</version>
  <description>Pointcloud rotation based on a angle</description>
  <maintainer email="admin@example.com">Username</maintainer>
  <license>MS</license>
  <author email="admin@example.pt">Username</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libopenni-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libopenni-sensor-primesense-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>libopenni-dev</run_depend>
  <run_depend>libusb-1.0-dev</run_depend>
  <run_depend>libopenni-sensor-primesense-dev</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
</package>
